<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory app:title="@string/settings_header_service">
        <EditTextPreference
            app:key="url"
            app:title="@string/settings_service_url"
            app:useSimpleSummaryProvider="true"
            android:inputType="text"
            android:defaultValue="https://aikutsk.ru/irtm"
            />
        <EditTextPreference
            app:key="gate"
            app:title="@string/settings_service_gate"
            app:useSimpleSummaryProvider="true"
            android:inputType="numberDecimal"
            />
        <EditTextPreference
            app:key="secret"
            app:title="@string/settings_service_secret"
            app:useSimpleSummaryProvider="true"
            android:inputType="numberDecimal"
            />
        <ListPreference
            app:key="proto"
            app:defaultValue="grpc"
            app:entries="@array/service_proto_entries"
            app:entryValues="@array/service_proto_values"
            app:title="@string/settings_service_proto"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:key="theme"
            app:defaultValue="light"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:title="@string/settings_theme"
            app:useSimpleSummaryProvider="true" />
        <CheckBoxPreference
            app:key="force_log"
            app:title="@string/settings_force_log"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="true"
            />
        <CheckBoxPreference
            app:key="auto_start"
            app:title="@string/settings_auto_start"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="true"
            />
    </PreferenceCategory>
</PreferenceScreen>